tests/ui/match/match-pattern-field-mismatch-2.stderr
error[E0532]: expected tuple struct or tuple variant, found unit variant `Color::NoColor`
  --> $DIR/match-pattern-field-mismatch-2.rs:12:11
   |
LL |         NoColor,
   |         ------- `Color::NoColor` defined here
...
LL |           Color::NoColor(_) => { }
   |           ^^^^^^^^^^^^^^^^^ help: use this syntax instead: `Color::NoColor`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0532`.
